Replace Guava basic immutable collections with native Java collections.